--- a/src/index.scss
+++ b/src/index.scss
@@ -1,15 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap');
 
 html {
+    background-color: rgba(128, 128, 128, 0.5);
+    margin: 0;
     font-family: 'Roboto', sans-serif;
 }
 
 body {
-    background-color: rgba(128, 128, 128, 0.5);
-    margin: 0;
+
 }
 
 .bmwadforth {
+
     .container {
         width: 40%;
         margin: 0 auto;
@@ -36,7 +38,7 @@ body {
                         width: 80%;
                         margin: 25px auto;
                         padding: 1em;
-                        background-color: rgba(255, 255, 255, 0.3);
+                        background-color: rgba(#515751, 0.3);
                         border-radius: 4px;
                         text-align: center;
 
@@ -48,7 +50,7 @@ body {
 
                         sub {
                             display: inline-block;
-                            background-color: rgba(128, 255, 255, 0.3);
+                            background-color: rgba(#FF8360, 0.3);
                             padding: 0.5em;
                             margin: 0.5em;
                             border-radius: 4px;
@@ -56,7 +58,7 @@ body {
 
                         &:hover {
                             cursor: pointer;
-                            box-shadow: 0 0 0 2px rgba(128, 255, 255, 0.3);
+                            box-shadow: 0 0 0 2px rgba(#FF8360, 0.3);
                         }
 
                     }
@@ -83,7 +85,7 @@ body {
                             border-bottom: 2px dashed black;
 
                             &:hover {
-                                color: rgba(128, 128, 128, 0.3);
+                                color: rgba(#FF8360, 0.3);
                                 cursor: pointer;
                             }
                         }
