--- a/src/index.scss
+++ b/src/index.scss
@@ -25,18 +25,28 @@ body {
             display: flex;
             align-items: start;
 
+            h1 {
+                margin: 0 0 50px;
+            }
+
             .content {
                 display: flex;
                 flex: 3;
                 width: 50%;
+                padding: 1em;
 
                 .articles {
                     width: 80%;
                     margin: 0 auto;
+                    
+                    a {
+                        text-decoration: none;
+                        color: black;
+                    }
 
                     .article-item {
                         width: 80%;
-                        margin: 25px auto;
+                        margin: 0 auto 25px;
                         padding: 1em;
                         background-color: rgba(#515751, 0.3);
                         border-radius: 4px;
@@ -44,9 +54,6 @@ body {
 
                         transition: box-shadow 0.3s ease-in-out;
 
-                        h1 {
-                            margin-bottom: 0.5em;
-                        }
 
                         sub {
                             display: inline-block;
@@ -63,12 +70,18 @@ body {
 
                     }
                 }
+
+                .article-view {
+                    width: 100%;
+                    text-align: center;
+                }
             }
 
             .navigation {
                 display: flex;
                 flex: 1;
                 text-align: center;
+                padding: 1em;
 
                 .title {
 
@@ -79,7 +92,6 @@ body {
                         text-decoration: none;
                         color: #000;
                         h1 {
-                            margin: 50px 0;
                             font-size: 32px;
                             transition: color 0.3s ease-in-out;
                             border-bottom: 2px dashed black;
