Updating articles logic so errors are handled appropriately

--- a/src/Assets/Articles/Articles.scss
+++ b/src/Assets/Articles/Articles.scss
@@ -13,7 +13,7 @@
         border-radius: $border-radius;
 
         &:hover {
-            background-color: rgba($core-secondary, 0.2);
+            background-color: rgba($core-primary, 0.2);
             border-radius: $border-radius;
         }
     }
