--- a/src/Assets/Styles/index.scss
+++ b/src/Assets/Styles/index.scss
@@ -1,9 +1,8 @@
 @import "Variables";
-
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
 
 * {
-    box-sizing: border-box;;
+    box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -25,22 +24,23 @@ html, body {
 }
 
 .bmwadforth {
+    @import "Pages/Home";
+
     @import "Utility/Button";
     @import "Utility/Alert";
     @import "Utility/Form/WebForm";
     @import "Utility/Form/Field";
+
     .wrap {
         @import "Navigation";
 
         section.main {
-            width: 70%;
-            margin: 25px auto 0;
-
             .content {
+                width: 70%;
+                margin: 25px auto 0;
                 @import "Pages/Articles";
-
+                @import "Pages/About";
             }
-
         }
     }
 }
