--- a/src/Assets/Styles/Utility/Alert.scss
+++ b/src/Assets/Styles/Utility/Alert.scss
@@ -8,6 +8,7 @@
     border-left: 7px solid $primary;
     border-radius: $border-radius;
     color: $dark;
+    width: 100%;
     p {
         display: flex;
         align-items: center;
