--- a/src/Assets/Styles/_Variables.scss
+++ b/src/Assets/Styles/_Variables.scss
@@ -4,7 +4,7 @@ $view-port-width: 60%;
 
 //Navigation
 $link-font-size: 32px;
-
+$navigation-height: 100px;
 
 //Transitions
 $transition-time: 0.3s;
