--- a/src/Assets/Styles/Navigation.scss
+++ b/src/Assets/Styles/Navigation.scss
@@ -7,7 +7,7 @@ nav.navigation {
     width: 100%;
     min-height: $navigation-height;
     background-color: $danger;
-    border-bottom: 2px solid $light;
+    border-bottom: 2px solid $warning;
     color:  $light;
 
     .navigation-wrap {
