--- a/src/Assets/Styles/Utility/Form/Field.scss
+++ b/src/Assets/Styles/Utility/Form/Field.scss
@@ -2,7 +2,7 @@
 
 input, textarea, select {
     outline: none;
-    border: 2px solid rgba(128, 128, 128, 0.5);
+    border: 2px solid rgba(128, 128, 128, 0.8);
     background-color: rgba($light, 1);
     padding: 0.5em 1em;
     border-radius: $border-radius;
@@ -10,10 +10,10 @@ input, textarea, select {
     transition: border $transition-time ease-in-out;
     &:hover {
         cursor: pointer;
-        border: 2px solid rgba(128, 128, 128, 1);
+        border: 2px solid rgba($dark, 1);
     }
 
     &:focus {
-        border: 2px solid $primary;
+        border: 2px solid $warning;
     }
 }
