--- a/src/Assets/Styles/index.scss
+++ b/src/Assets/Styles/index.scss
@@ -40,6 +40,24 @@ html, body {
                 margin: $view-port-margin-top auto 0;
                 @import "Pages/Articles";
                 @import "Pages/About";
+
+                .not-found {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    .not-found-text {
+                        display: flex;
+                        flex-direction: column;
+                        font-size: 24px;
+                        margin-right: 100px;
+                    }
+
+                    .not-found-vector {
+                        svg {
+                            height: 500px;
+                        }
+                    }
+                }
             }
         }
     }
