--- a/src/Assets/Styles/Pages/Home.scss
+++ b/src/Assets/Styles/Pages/Home.scss
@@ -2,6 +2,8 @@
 
 .home {
     height: calc(100vh - #{$navigation-height});
+    background-color: $danger;
+    border-top: 2px solid $light;
 
     .background {
         position: absolute;
