I think I'm finally happy with the home page...maybe

--- a/src/Assets/Styles/Pages/About.scss
+++ b/src/Assets/Styles/Pages/About.scss
@@ -19,7 +19,7 @@
         display: flex;
         justify-content: center;
         margin-top: 50px;
-        border-top: 2px solid $danger;
+        border-top: 2px solid $dark;
 
         span {
             padding: 1em;
