--- a/src/Assets/Styles/Pages/About.scss
+++ b/src/Assets/Styles/Pages/About.scss
@@ -32,7 +32,7 @@
                 &:hover {
                     svg {
                         path {
-                            fill: $danger !important;
+                            fill: $warning !important;
                         }
                     }
                 }
