--- a/src/Assets/Styles/Pages/Articles.scss
+++ b/src/Assets/Styles/Pages/Articles.scss
@@ -53,7 +53,8 @@
 
                 .article-tag {
                     display: inline-block;
-                    background-color: rgba($danger, 1);
+                    background-color: rgba($warning, 1);
+                    color: $dark;
                     padding: 0.25em 0.5em;
                     margin: 0.25em 0.5em 0.5em 0;
                     border-radius: $border-radius;
@@ -71,7 +72,7 @@
                 box-shadow: rgba($dark, 0.25) 0 20px 40px;
 
                 .article-tag {
-                    background-color: $warning;
+                    background-color: $light;
                     color: $dark;
                 }
             }
