--- a/src/Assets/Styles/_Queries.scss
+++ b/src/Assets/Styles/_Queries.scss
@@ -155,14 +155,14 @@
                     }
                     .not-found {
                         text-align: center;
+                        flex-direction: column;
                         .not-found-text {
                             font-size: 18px;
-                            margin: 0;
+                            margin: 0 0 1em 0;
                         }
                         .not-found-vector {
-                            display: none;
                             svg {
-                                height: 250px;
+                                height: 200px;
                             }
                         }
                     }
