--- a/src/Assets/Styles/index.scss
+++ b/src/Assets/Styles/index.scss
@@ -41,6 +41,7 @@ html, body {
                 @import "Pages/Articles";
                 @import "Pages/Article";
                 @import "Pages/About";
+                @import "Pages/Admin";
 
                 .not-found {
                     display: flex;
