--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
 @import "navigation";
 @import "dashboard";
@@ -15,6 +15,7 @@
   align-items: center;
 
   main {
+    min-width: 300px;
     min-height: 250px;
   }
 
