Updating new-master

--- a/src/assets/styles/navigation.scss
+++ b/src/assets/styles/navigation.scss
@@ -22,6 +22,15 @@
         margin-left: 0.2em;
       }
 
+      &.item-active {
+        a {
+          color: black;
+        }
+      }
+
     }
+  }
+  .navigation-social {
+
   }
 }
