--- a/src/assets/styles/dashboard.scss
+++ b/src/assets/styles/dashboard.scss
@@ -8,7 +8,15 @@ main {
   }
 }
 
-.dashboard-list {
-  margin: 0;
-  list-style: circle;
+.dashboard {
+  width: 400px;
+
+  .title {
+    font-weight: normal;
+  }
+
+  .credentials {
+    font-size: 0.90em;
+    color: gray;
+  }
 }
