--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -2,6 +2,7 @@
 
 @import "navigation";
 @import "dashboard";
+@import "icon";
 
 * {
   box-sizing: border-box;
@@ -28,4 +29,10 @@
 #root, body {
   margin: 0;
   height: 100vh;
+}
+
+.divider {
+  height: 0.5px;
+  border: 0.5px solid gray;
+  width: 100%;
 }
