--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -36,3 +36,10 @@
   border: 0.5px solid gray;
   width: 100%;
 }
+
+html {
+  background-image: url("unnamed.gif");
+  background-color: black;
+  background-repeat: no-repeat;
+  color: white;
+}
