--- a/src/assets/styles/icon.scss
+++ b/src/assets/styles/icon.scss
@@ -24,7 +24,7 @@
         svg {
           path {
             cursor: pointer;
-            fill: yellowgreen !important;
+            fill: limegreen !important;
           }
         }
       }
