--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
-@import "navigation";
-@import "dashboard";
-@import "icon";
+@import 'navigation';
+@import 'dashboard';
+@import 'icon';
 
 * {
   box-sizing: border-box;
@@ -26,7 +26,8 @@
   }
 }
 
-#root, body {
+#root,
+body {
   margin: 0;
   height: 100vh;
 }
@@ -38,7 +39,7 @@
 }
 
 html {
-  background-image: url("unnamed.gif");
+  background-image: url('unnamed.gif');
   background-color: black;
   background-repeat: no-repeat;
   color: white;
