--- a/src/assets/styles/navigation.scss
+++ b/src/assets/styles/navigation.scss
@@ -10,7 +10,7 @@
       font-size: 1.5em;
 
       a {
-        color: yellowgreen;
+        color: limegreen;
         text-decoration: none;
 
         transition: color 0.3s ease;
@@ -29,11 +29,9 @@
           color: black;
         }
       }
-
     }
   }
 
   .navigation-social {
-
   }
 }
