--- a/src/assets/styles/dashboard.scss
+++ b/src/assets/styles/dashboard.scss
@@ -8,8 +8,20 @@ main {
   }
 }
 
+.dashboard-container {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url('unnamed.gif');
+  background-color: black;
+  background-repeat: no-repeat;
+  color: white;
+}
+
 .dashboard {
   width: 400px;
+  margin-bottom: 200px;
 
   .title {
     font-weight: normal;
