--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -38,10 +38,25 @@ body {
   color: white;
 }
 
+.dashboard-container {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url('unnamed.gif');
+  background-color: black;
+  background-repeat: no-repeat;
+  color: white;
+}
+
 @media only screen and (max-width: 800px) {
   html {
+    .dashboard-container {
+      background-image: none;
+    }
+
     .dashboard {
-      background-color: rgba(limegreen, 0.8);
+      background-color: rgba(limegreen, 1);
       border-radius: 4px;
       color: black;
       padding: 1em;
